Lab2_Sok_Yongyi_IDTB080158

--- a/lab_2_revised.ipynb
+++ b/lab_2_revised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "81d8d80a",
    "metadata": {},
    "outputs": [
@@ -35,27 +35,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>{\\n   \"title\": \"Introduction to Python\",\\n   \"...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Introduction to Python\",\\r\\n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>{\\n   \"title\": \"Data Analysis with Pandas\",\\n ...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Data Analysis with Pandas\",\\...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>{\\n   \"title\": \"Web Development with Flask\",\\n...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Web Development with Flask\",...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>{\\n   \"title\": \"Machine Learning with Scikit-L...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Machine Learning with Scikit...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>{\\n   \"title\": \"Data Visualization with Matplo...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Data Visualization with Matp...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -63,14 +63,14 @@
       ],
       "text/plain": [
        "   Document ID                                            Content\n",
-       "0            1  {\\n   \"title\": \"Introduction to Python\",\\n   \"...\n",
-       "1            2  {\\n   \"title\": \"Data Analysis with Pandas\",\\n ...\n",
-       "2            3  {\\n   \"title\": \"Web Development with Flask\",\\n...\n",
-       "3            4  {\\n   \"title\": \"Machine Learning with Scikit-L...\n",
-       "4            5  {\\n   \"title\": \"Data Visualization with Matplo..."
+       "0            1  {\\r\\n   \"title\": \"Introduction to Python\",\\r\\n...\n",
+       "1            2  {\\r\\n   \"title\": \"Data Analysis with Pandas\",\\...\n",
+       "2            3  {\\r\\n   \"title\": \"Web Development with Flask\",...\n",
+       "3            4  {\\r\\n   \"title\": \"Machine Learning with Scikit...\n",
+       "4            5  {\\r\\n   \"title\": \"Data Visualization with Matp..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a5ea1871",
    "metadata": {},
    "outputs": [
@@ -118,44 +118,38 @@
        "      <th>Document ID</th>\n",
        "      <th>Content</th>\n",
        "      <th>Terms</th>\n",
-       "      <th>Terms_prep</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>{\\n   \"title\": \"Introduction to Python\",\\n   \"...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Introduction to Python\",\\r\\n...</td>\n",
        "      <td>[Introduction, to, Python]</td>\n",
-       "      <td>[introduction, python]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>{\\n   \"title\": \"Data Analysis with Pandas\",\\n ...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Data Analysis with Pandas\",\\...</td>\n",
        "      <td>[Data, Analysis, with, Pandas]</td>\n",
-       "      <td>[data, analysis, pandas]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>{\\n   \"title\": \"Web Development with Flask\",\\n...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Web Development with Flask\",...</td>\n",
        "      <td>[Web, Development, with, Flask]</td>\n",
-       "      <td>[web, development, flask]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>{\\n   \"title\": \"Machine Learning with Scikit-L...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Machine Learning with Scikit...</td>\n",
        "      <td>[Machine, Learning, with, Scikit-Learn]</td>\n",
-       "      <td>[machine, learning, scikit-learn]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>{\\n   \"title\": \"Data Visualization with Matplo...</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Data Visualization with Matp...</td>\n",
        "      <td>[Data, Visualization, with, Matplotlib]</td>\n",
-       "      <td>[data, visualization, matplotlib]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -163,21 +157,21 @@
       ],
       "text/plain": [
        "   Document ID                                            Content  \\\n",
-       "0            1  {\\n   \"title\": \"Introduction to Python\",\\n   \"...   \n",
-       "1            2  {\\n   \"title\": \"Data Analysis with Pandas\",\\n ...   \n",
-       "2            3  {\\n   \"title\": \"Web Development with Flask\",\\n...   \n",
-       "3            4  {\\n   \"title\": \"Machine Learning with Scikit-L...   \n",
-       "4            5  {\\n   \"title\": \"Data Visualization with Matplo...   \n",
+       "0            1  {\\r\\n   \"title\": \"Introduction to Python\",\\r\\n...   \n",
+       "1            2  {\\r\\n   \"title\": \"Data Analysis with Pandas\",\\...   \n",
+       "2            3  {\\r\\n   \"title\": \"Web Development with Flask\",...   \n",
+       "3            4  {\\r\\n   \"title\": \"Machine Learning with Scikit...   \n",
+       "4            5  {\\r\\n   \"title\": \"Data Visualization with Matp...   \n",
        "\n",
-       "                                     Terms                         Terms_prep  \n",
-       "0               [Introduction, to, Python]             [introduction, python]  \n",
-       "1           [Data, Analysis, with, Pandas]           [data, analysis, pandas]  \n",
-       "2          [Web, Development, with, Flask]          [web, development, flask]  \n",
-       "3  [Machine, Learning, with, Scikit-Learn]  [machine, learning, scikit-learn]  \n",
-       "4  [Data, Visualization, with, Matplotlib]  [data, visualization, matplotlib]  "
+       "                                     Terms  \n",
+       "0               [Introduction, to, Python]  \n",
+       "1           [Data, Analysis, with, Pandas]  \n",
+       "2          [Web, Development, with, Flask]  \n",
+       "3  [Machine, Learning, with, Scikit-Learn]  \n",
+       "4  [Data, Visualization, with, Matplotlib]  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,15 +190,104 @@
     "    return terms\n",
     "tokenize_content(df[\"Content\"][0])\n",
     "# 2. apply to all row in panda df , by create new column \"Terms\"\n",
-    "df[\"Terms\"] = # your code here.....\n"
+    "df[\"Terms\"] = df[\"Terms\"] = df[\"Content\"].apply(tokenize_content)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e3d23e40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Document ID</th>\n",
+       "      <th>Content</th>\n",
+       "      <th>Terms</th>\n",
+       "      <th>Terms_preprocessed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Introduction to Python\",\\r\\n...</td>\n",
+       "      <td>[Introduction, to, Python]</td>\n",
+       "      <td>[introduction, python]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Data Analysis with Pandas\",\\...</td>\n",
+       "      <td>[Data, Analysis, with, Pandas]</td>\n",
+       "      <td>[data, analysis, pandas]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Web Development with Flask\",...</td>\n",
+       "      <td>[Web, Development, with, Flask]</td>\n",
+       "      <td>[web, development, flask]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Machine Learning with Scikit...</td>\n",
+       "      <td>[Machine, Learning, with, Scikit-Learn]</td>\n",
+       "      <td>[machine, learning, scikit-learn]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>{\\r\\n   \"title\": \"Data Visualization with Matp...</td>\n",
+       "      <td>[Data, Visualization, with, Matplotlib]</td>\n",
+       "      <td>[data, visualization, matplotlib]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Document ID                                            Content  \\\n",
+       "0            1  {\\r\\n   \"title\": \"Introduction to Python\",\\r\\n...   \n",
+       "1            2  {\\r\\n   \"title\": \"Data Analysis with Pandas\",\\...   \n",
+       "2            3  {\\r\\n   \"title\": \"Web Development with Flask\",...   \n",
+       "3            4  {\\r\\n   \"title\": \"Machine Learning with Scikit...   \n",
+       "4            5  {\\r\\n   \"title\": \"Data Visualization with Matp...   \n",
+       "\n",
+       "                                     Terms                 Terms_preprocessed  \n",
+       "0               [Introduction, to, Python]             [introduction, python]  \n",
+       "1           [Data, Analysis, with, Pandas]           [data, analysis, pandas]  \n",
+       "2          [Web, Development, with, Flask]          [web, development, flask]  \n",
+       "3  [Machine, Learning, with, Scikit-Learn]  [machine, learning, scikit-learn]  \n",
+       "4  [Data, Visualization, with, Matplotlib]  [data, visualization, matplotlib]  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Implement a preprocessing function that converts terms to lowercase, removes punctuation, and removes common stop words.\n",
     "    # Create another new column \"Terms_preprocessed\"\n",
@@ -222,12 +305,14 @@
     "    \n",
     "    return terms\n",
     "\n",
-    "# your code here...."
+    "# your code here....\n",
+    "df[\"Terms_preprocessed\"] = df[\"Terms\"].apply(preprocess_terms)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "131fdcaf",
    "metadata": {},
    "outputs": [
@@ -249,7 +334,7 @@
        " 'matplotlib': {5}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +348,7 @@
     "# Build the inverted index\n",
     "for index, row in df.iterrows():\n",
     "    document_id = row[\"Document ID\"]\n",
-    "    terms = row[\"Terms_prep\"]\n",
+    "    terms = row[\"Terms_preprocessed\"]\n",
     "    \n",
     "    # Update the inverted index with terms and document IDs\n",
     "    for term in terms:\n",
@@ -277,14 +362,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "1b929397",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 5]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# perform boolean operations on postings lists for Boolean search operations\n",
-    "# 1. \"Python\" OR \"Pandas\"\n",
-    "# 2. \"Python\" AND \"data\""
+    "#Or 'phyton', 'pandas'\n",
+    "def or_postings(posting1, posting2):\n",
+    "    p1 = 0\n",
+    "    p2 = 0\n",
+    "    result = list()\n",
+    "    while p1<len(posting1) and p2<len(posting2):\n",
+    "        if posting1[p1] == posting2[p2]:\n",
+    "            result.append(posting1[p1])\n",
+    "            p1+=1\n",
+    "            p2+=1\n",
+    "        elif posting1[p1]>posting2[p2]:\n",
+    "            result.append(posting2[p2])\n",
+    "            p2+=1\n",
+    "        else:\n",
+    "            result.append(posting1[p1])\n",
+    "            p1+=1\n",
+    "    while p1 < len(posting1):\n",
+    "        result.append(posting1[p1])\n",
+    "        p1+=1\n",
+    "    while p2 < len(posting2):\n",
+    "        result.append(posting2[p2])\n",
+    "        p2+=1\n",
+    "    return result\n",
+    "\n",
+    "pl_1 = list(inverted_index['python'])\n",
+    "pl_2 = list(inverted_index['data'])\n",
+    "or_postings(pl_1,pl_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "af050af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. \"Python\" AND \"data\"\n",
+    "def and_postings(posting1, posting2):\n",
+    "    p1 = 0\n",
+    "    p2 = 0\n",
+    "    result = list()\n",
+    "    while p1 < len(posting1) and p2 <len(posting2):\n",
+    "        if posting1[p1] == posting2[p2]:\n",
+    "            result.append(posting1[p1])\n",
+    "            p1+=1\n",
+    "            p2+=1\n",
+    "        elif posting1[p1] > posting2[p2]:\n",
+    "            p2+=1\n",
+    "        else:\n",
+    "            p1+=1\n",
+    "    return result\n",
+    "pl_1 = list(inverted_index['python'])\n",
+    "pl_2 = list(inverted_index['data'])\n",
+    "and_postings(pl_1, pl_2)"
    ]
   }
  ],
@@ -304,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
